Updated server helloWorld

--- a/server/war/CockyReaders_server.html
+++ b/server/war/CockyReaders_server.html
@@ -44,7 +44,7 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
+    <h1>Hello! You've reached the CockyReaders Website!</h1>
 
     <table align="center">
       <tr>
@@ -53,6 +53,9 @@
       <tr>
         <td id="nameFieldContainer"></td>
         <td id="sendButtonContainer"></td>
+      </tr>
+      <tr>
+        <td colspan="2" style="font-weight:bold;">Hello Dr. Vidal!</td>
       </tr>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
