--- a/phonegap/www/reader/dev.html
+++ b/phonegap/www/reader/dev.html
@@ -25,7 +25,7 @@
                 EPUBJS.cssPath = "css/";
                 // fileStorage.filePath = EPUBJS.filePath;
 
-                window.Reader = ePubReader("moby-dick/", { reload: true, generatePagination: false });
+                window.Reader = ePubReader("sleeping_beauty/", { reload: true, generatePagination: false });
               }  
             };
         
