--- a/phonegap/www/reader/index.html
+++ b/phonegap/www/reader/index.html
@@ -25,7 +25,7 @@
                 EPUBJS.cssPath = "css/";
                 // fileStorage.filePath = EPUBJS.filePath;
 
-                var reader = ePubReader("moby-dick/");
+                var reader = ePubReader("sleeping_beauty/");
               }  
             };
         
@@ -73,7 +73,8 @@
       <div id="main">
         
         <div id="titlebar">
-          <div id="opener">
+              <div id="opener">
+            <a id="slider" class="icon-menu">Menu</a>
           </div>
           <div id="metainfo">
             <span id="book-title"></span>
