Fixed the menu button.

--- a/phonegap/www/reader/index.html
+++ b/phonegap/www/reader/index.html
@@ -73,9 +73,9 @@
       <div id="main">
         
         <div id="titlebar">
-              <div id="opener">
-            <a id="slider" class="icon-menu">Menu</a>
-          </div>
+            <div id="opener">
+                <a id="slider" class="icon-menu" href="http://www.google.com">Menu</a>
+            </div>
           <div id="metainfo">
             <span id="book-title"></span>
             <span id="title-seperator">&nbsp;&nbsp;–&nbsp;&nbsp;</span>
