--- a/phonegap/www/reader.html
+++ b/phonegap/www/reader.html
@@ -72,7 +72,7 @@
       <div id="main">
         <div id="titlebar">
             <div id="opener">
-                <a id="slider" class="icon-menu" href="../index.html">Menu</a>
+                <a id="slider" class="icon-menu" href="index.html">Menu</a>
             </div>
           <div id="metainfo">
             <span id="book-title"></span>
