--- a/phonegap/www/register.html
+++ b/phonegap/www/register.html
@@ -16,48 +16,50 @@
   <!-- Change the action to take us to the login page so they can relogin -->
   <form style="font-family:Comic Sans MS" align="middle" action="login_action_page.php" method="POST">
   	
+  	<font size="5">
   	<!-- What is your first Name? -->
   
-  	<input type="text" name="firstName" size="40" style="font-family:Comic Sans MS"
-  	value="What is your first name?">
+  	First Name: <input type="text" name="firstName" size="40" style="font-family:Comic Sans MS"
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="What is your first name?">
   	<br>
   
-	<!-- What is your first Name? -->
+	<!-- What is your last Name? -->
   
-  	<input type="text" name="lastName" size="40" style="font-family:Comic Sans MS"
-  	value="What is your last name?">
+  	Last Name: <input type="text" name="lastName" size="40" style="font-family:Comic Sans MS"
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="What is your last name?">
   	<br>
 
   	<!-- Create a username! -->
 
-	<input type="text" name="userName" size="40" style="font-family:Comic Sans MS"
-  	value="Create a username!">
+	Username: <input type="text" name="userName" size="40" style="font-family:Comic Sans MS"
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="Create a username!">
   	<br>
 
 
   	<!-- Create a password! -->
 
-	<input type="text" name="password" size="40" style="font-family:Comic Sans MS"
-  	value="Create a password!">
+	Password: <input type="text" name="password" size="40" style="font-family:Comic Sans MS"
+	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false>
   	<br>
 
   	<!-- Who is your teacher? -->
 
-	<input type="text" name="teacher" size="40" style="font-family:Comic Sans MS"
-  	value="Who is your Teacher?">
+	Teacher: <input type="text" name="teacher" size="40" style="font-family:Comic Sans MS"
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="Who is your Teacher?">
   	<br>
   
 
 	<!-- What is your Lunch Pin? -->
 
-  	<input type="text" name="lunchPin" size="40" style="font-family:Comic Sans MS"
-  	value="What is your Lunch Pin?">
+  	Lunch Pin:<input type="text" name="lunchPin" size="40" style="font-family:Comic Sans MS"
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="What is your Lunch Pin?">
 	<br>
 	
 	<!-- What grade are you in? -->
 	
 	What grade are you in?
-	<input type="number" name ="grade" min="0" max="5" style="font-family:Comic Sans MS">
+	<input type="number" name ="grade" min="0" max="5" style="font-family:Comic Sans MS"
+	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false>
 	
 
   	<br><br>
@@ -65,7 +67,7 @@
   		<input type="submit" value="I'm Done!">
 	</a>
 
-  
+  	</font>
   </form>
   
   <!-- Need to add Cocky pic and USC logo to www/img folder and then pull from there -->
