--- a/phonegap/www/register.html
+++ b/phonegap/www/register.html
@@ -20,19 +20,19 @@
   	<!-- What is your first Name? -->
   
   	First Name: <input type="text" name="firstName" size="40" style="font-family:Comic Sans MS"
-  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="What is your first name?">
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false>
   	<br>
   
 	<!-- What is your last Name? -->
   
   	Last Name: <input type="text" name="lastName" size="40" style="font-family:Comic Sans MS"
-  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="What is your last name?">
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
   	<br>
 
   	<!-- Create a username! -->
 
 	Username: <input type="text" name="userName" size="40" style="font-family:Comic Sans MS"
-  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="Create a username!">
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
   	<br>
 
 
@@ -45,14 +45,14 @@
   	<!-- Who is your teacher? -->
 
 	Teacher: <input type="text" name="teacher" size="40" style="font-family:Comic Sans MS"
-  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="Who is your Teacher?">
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
   	<br>
   
 
 	<!-- What is your Lunch Pin? -->
 
   	Lunch Pin:<input type="text" name="lunchPin" size="40" style="font-family:Comic Sans MS"
-  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="What is your Lunch Pin?">
+  	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
 	<br>
 	
 	<!-- What grade are you in? -->
@@ -64,7 +64,7 @@
 
   	<br><br>
 	<a href="COckyReaders/phonegap/www/loginPage.html">
-  		<input type="submit" value="I'm Done!">
+  		<input type="submit" value="I'm Done!" style="height:75px; width:100px">
 	</a>
 
   	</font>
