--- a/phonegap/www/loginPage.html
+++ b/phonegap/www/loginPage.html
@@ -18,22 +18,22 @@
 	<font size="5">
 	<!-- Username: <br> -->
 
-	<input type="text" name="Username" style="font-family:Comic Sans MS"
+	Username: <input type="text" name="Username" style="font-family:Comic Sans MS"
 	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="Username">
 	<br>
 
 	<!-- User Password: <br> -->
 
-	<input type="password" name="password" style="font-family:Comic Sans MS"
+	Password: <input type="password" name="password" style="font-family:Comic Sans MS"
 	autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false value="Password">
 	<br><br>
 
-	<input type="submit" value="Login">
+	<input type="submit" style="height:75px; width:100px" value="Login">
 	
 
 
 	<!-- change the onclick action to take to register page -->
-	<button onclick="CockyReaders/phonegap/www/register.html">Register</button>
+	<button onclick="CockyReaders/phonegap/www/register.html" style="height:75px; width:100px">Register</button>
 
 	</font>
 </form>
