fixed merge mistakes

--- a/phonegap/www/bookshelf.html
+++ b/phonegap/www/bookshelf.html
@@ -16,13 +16,14 @@
     <body>
         <table width="100%" style="margin-left:-3px;">
             <tbody><tr class="bookshelf">
-            
                 <td>
                     <span class="bookshelf-title">
-                        <a class="bookshelf-name-link">Test Student's Bookshelf</a>
-                        <a href="CockyReaders/phonegap/www/loginPage.html">
-  				<input type="button" align="top|right" value="Log Out">
-			</a>
+                        <div display="inline" align="center"> 
+                            <a class="bookshelf-name-link">Test Student's Bookshelf</a>
+                            <div display="inline" align="right"> 
+                                <input type="button" align="right" value="Log Out">
+                            </div>
+                        </div>
                     </span>
                     <div class="grid_11 alpha omega bookshelf-body">
                         <div id="bookshelf" class="grid_10 alpha omega" style="padding-left:40px">
