--- a/phonegap/platforms/ios/www/bookshelf.html
+++ b/phonegap/platforms/ios/www/bookshelf.html
@@ -14,14 +14,16 @@
         <title>Test Student's Bookshelf</title>
     </head>
     <body>
-        <a href="index.html">
-  		<input type="button" align="top|right" value="Log Out">
-	</a>
         <table width="100%" style="margin-left:-3px;">
             <tbody><tr class="bookshelf">
                 <td>
                     <span class="bookshelf-title">
-                        <a class="bookshelf-name-link">Test Student's Bookshelf</a>                
+                        <div display="inline" align="center"> 
+                            <a class="bookshelf-name-link">Test Student's Bookshelf</a>
+                            <div display="inline" align="right"> 
+                                <input type="button" align="right" value="Log Out">
+                            </div>
+                        </div>
                     </span>
                     <div class="grid_11 alpha omega bookshelf-body">
                         <div id="bookshelf" class="grid_10 alpha omega" style="padding-left:40px">
