--- a/phonegap/platforms/ios/www/reader.html
+++ b/phonegap/platforms/ios/www/reader.html
@@ -37,7 +37,7 @@
                     EPUBJS.cssPath = "css/";
                     
                     var bookURL = getCookie("bookURL");
-                    var reader = ePubReader(bookURL);
+                    var reader = ePubReader(bookURL, { width: 1024, height: 768 });
                     var user = getCookie("user");
                 }  
             };
