--- a/phonegap/platforms/ios/www/bookshelf.html
+++ b/phonegap/platforms/ios/www/bookshelf.html
@@ -19,9 +19,11 @@
                 <td>
                     <span class="bookshelf-title">
                         <div display="inline" align="center"> 
-                            <a class="bookshelf-name-link">Test Student's Bookshelf</a>
+                            <a id="bookshelfName" class="bookshelf-name-link"></a>
                             <div display="inline" align="right"> 
+                                <a href="index.html">
                                 <input type="button" align="right" value="Log Out">
+                                </a>
                             </div>
                         </div>
                     </span>
