--- a/phonegap/www/register.html
+++ b/phonegap/www/register.html
@@ -4,9 +4,7 @@
 <html>
   <head>
   	<title>Registration Page</title>
-	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, 
-	minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-	<meta name="format-detection" content="telephone=no" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=1024, height=768, target-densitydpi=device-dpi" />	<meta name="format-detection" content="telephone=no" />
     <script src="js/jquery.js"></script>
     <script src="js/login.js"></script>
     <script type="text/javascript">
