--- a/phonegap/platforms/ios/www/bookshelf.html
+++ b/phonegap/platforms/ios/www/bookshelf.html
@@ -8,8 +8,7 @@
         <meta charset="utf-8"/>
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-
+<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=1024, height=768, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/bookshelf.css">
         <title>Test Student's Bookshelf</title>
     </head>
