--- a/phonegap/www/bookshelf.html
+++ b/phonegap/www/bookshelf.html
@@ -10,7 +10,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=1024, height=768, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/bookshelf.css">
-        <title>Test Student's Bookshelf</title>
+        <title>Your Bookshelf</title>
     </head>
     <body>
         <table width="100%" style="margin-left:-3px;">
