Fixing image files

--- a/server/src/site/index.html
+++ b/server/src/site/index.html
@@ -168,9 +168,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</li>
                     
    		   </div>
-                  <div style="margin-left: 22.5%; margin-right: 25%;">
+                  <div style="margin-left: 26%; margin-right: 25%;">
                                       <p style="text-align: center">Or watch our tutorial here!</p>
-                <iframe width="640" height="390" src="https://www.youtube.com/embed/0vxOhd4qlnA" frameborder="0" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLViVUtCHOHH1bZsoa60x8KqX-A_MLgGo4" frameborder="0" allowfullscreen></iframe>
 </div>
    		 </div>    
    		</div>
@@ -218,7 +218,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="bottom-footer">
 					<div class="wrap"> 
 						<div class="bottom-footer-left">
-							<p>Based off of Template by <a href="http://w3layouts.com/">W3layouts</a></p>
+							<p>Based off of <a href="http://w3layouts.com/">W3layouts</a></p>
 						</div>
 						<div class="bottom-footer-center">
 							<ul class="bottom-social-icons">
